--- a/Bootstrap_Mizuxe/css/style.css
+++ b/Bootstrap_Mizuxe/css/style.css
@@ -21,8 +21,19 @@ body {
     width: 100%;
     height: 100%; }
 
+.border-custom-primary {
+  border: 1px solid #3292a6; }
+
+.bg-custom-primary {
+  background: #3292a6; }
+
+.text-custom-primary {
+  color: #3292a6; }
+
 @media (max-width: 768px) {
   #showcase {
     min-height: 500px; }
     #showcase h1 {
-      font-size: 4rem; } }
+      font-size: 4rem; }
+  .mb-resp {
+    margin-bottom: 1rem; } }
