--- a/Bootstrap_Mizuxe/css/style.css
+++ b/Bootstrap_Mizuxe/css/style.css
@@ -30,6 +30,11 @@ body {
 .text-custom-primary {
   color: #3292a6; }
 
+.info-header {
+  width: 50%;
+  margin: auto;
+  border-bottom: 1px #ddd solid; }
+
 @media (max-width: 768px) {
   #showcase {
     min-height: 500px; }
