--- a/Bootstrap_Mizuxe/sass/main.scss
+++ b/Bootstrap_Mizuxe/sass/main.scss
@@ -43,6 +43,12 @@ body {
   color: $primary;
 }
 
+.info-header {
+  width: 50%;
+  margin: auto;
+  border-bottom: 1px #ddd solid;
+}
+
 @media (max-width: 768px) {
   #showcase {
     min-height: 500px;
