--- a/Bootstrap_Mizuxe/css/style.css
+++ b/Bootstrap_Mizuxe/css/style.css
@@ -30,10 +30,23 @@ body {
 .text-custom-primary {
   color: #3292a6; }
 
+.icon-custom {
+  color: #3292a6; }
+
 .info-header {
   width: 50%;
   margin: auto;
   border-bottom: 1px #ddd solid; }
+
+#authors img {
+  margin-top: -50px; }
+
+#authors .card:hover {
+  background: #3292a6;
+  color: #fff; }
+
+#authors .fab {
+  color: #fff; }
 
 @media (max-width: 768px) {
   #showcase {
