--- a/Bootstrap_Mizuxe/sass/main.scss
+++ b/Bootstrap_Mizuxe/sass/main.scss
@@ -35,6 +35,10 @@ body {
   border: 1px solid $primary;
 }
 
+.btn-custom-primary {
+  background: $primary;
+}
+
 .bg-custom-primary {
   background: $primary;
 }
