--- a/Bootstrap_Glozzom/css/style.css
+++ b/Bootstrap_Glozzom/css/style.css
@@ -1,3 +1,8 @@
+body {
+  overflow-x: hidden;
+  /* ^^^ no scrollbar on the x axis */
+}
+
 .navbar .nav-link {
   font-size: 14px;
   text-transform: uppercase;
